<resources>
    <string name="app_name">My Application</string>

<string name="view_recipes">View</string>
<string name="add_recipe">Add</string>
<string name="settings">Settings</string>
<string name="information">Info</string>
<string name="title">title</string>
<string name="category">category</string>
<string name="serving_size">serving_size</string>
<string name="ingredients">ingredients</string>
<string name="preparation">preparation</string>
<string name="notes">notes</string>
<string name="btn_text">Push</string>
<string name="settings_username">Username</string>
<string name="settings_fav_food">Favorite Food</string>
<string name="settings_budget">Target Budget</string>



<string-array name="spinnerItems">
    <item>Category</item>
    <item>Breakfast</item>
    <item>Lunch</item>
    <item>Dinner</item>
</string-array>
</resources>
